# ekans

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
ekans/: __main__.py  app.py  apple.py  barrier.py  board.py  cmdline.py  controller.py  directions.py  drawable.py  events.py  levels.py  menu.py  pathing.py  segment.py  snake.py  vision.py  window.py
ekans/controllers/: __init__.py  ai.py  base.py  headless.py  interactive.py  keyboard.py  manual.py
ekans/player/: __init__.py  ai.py  base.py  human.py  scripted.py
ekans/tests/: test_board.py  test_segment_list.py  test_snake.py  test_window.py
scripts/: ekans
tests/: test_board.py  test_pathing.py  test_segment_list.py  test_snake.py  test_vision.py  test_window.py
